feat: modifying the create addOn controller, and adding remove add-on
